games/css/crosswords2.css
/* ... */
body:has(:is([data-o="b"],[data-o="d"])[data-n="96"] input:focus) #hoverhint::after { content: "Down: " var(--down-96); }
body:has(:is([data-o="b"],[data-o="d"])[data-n="97"] input:focus) #hoverhint::after { content: "Down: " var(--down-97); }
body:has(:is([data-o="b"],[data-o="d"])[data-n="98"] input:focus) #hoverhint::after { content: "Down: " var(--down-98); }
body:has(:is([data-o="b"],[data-o="d"])[data-n="99"] input:focus) #hoverhint::after { content: "Down: " var(--down-99); }
body:has(:is([data-o="b"],[data-o="d"])[data-n="100"] input:focus) #hoverhint::after { content: "Down: " var(--down-100); }

article {
  --extra: drop-shadow(0 0 5px #0007);
  font-size: 1vmin;
  display: grid;
  grid-template-columns: repeat(25, 1fr);
  grid-template-rows: repeat(30, 1fr);
  width: 75em;
  width: auto;
  max-width: 100%;
  gap: 0;
  aspect-ratio: 5/6;
  background: #0000;
  border: 2px solid #0000;
  filter:
    drop-shadow(2px 0 #000)
    drop-shadow(-2px 0 #000)
    drop-shadow(0 2px #000)
    drop-shadow(0 -2px #000)
    /* var(--extra) */
    ;
  -webkit-print-color-adjust: exact;
  print-color-adjust: exact;
  break-after: page;

  label {
    width: 100%;
    min-width:100%;
    aspect-ratio: 1;
    padding: 0;
    margin: 0;
    position: relative;

    span {
      font-size: 1rem;
      position: absolute;
      line-height: 4;
      color: #000;
      width: 1px;
      height: 1px;
      overflow: clip;
    }

    &[data-o] {
      &:has(:focus) {
        anchor-name: --hint-here;
      }

      &::after {
        position: absolute;
        content: attr(data-n);
        font-size: 1.125em;
        top: 0.1em;
        left: 0.2em;
        line-height: 1;
        font-family: Roboto, Helvetica, sans-serif;
        color: #000;
      }
    }
  }

  input {
    border: 1px solid #ccc !important;
    width: 100%;
    aspect-ratio: 1;
    padding: 0 !important;
    margin: 0 !important;
    box-sizing: border-box !important;
    position: absolute;
    font-size: 2.25em !important;
    top: 0;
    left: 0;
    height: auto !important;
    background: #fff;
    text-align: center;
    text-transform: uppercase !important;
    color: #000 !important;
    min-width: 0 !important;
    min-height: 0 !important;
    border-radius: 0 !important;

    &:focus {
      background: #def;
    }

    &:focus-visible {
      outline: 1px solid var(--fg);
      outline-offset: -2px;
    }
  }
}

.hints {
  display: grid;
  font-size: 0.8em;
  font-size: 0.9em;
  margin-block-start: 2em;
  gap: 3em;

  /* @media (width > 600px) {
    grid-template-columns: 1fr 1fr;
  } */

  ol {
    margin: 0;
    padding: 1em;

    @media (width > 1000px) {
      column-count: 2;
      column-gap: 3em;
    }

    @media print {
      column-count: 2;
      column-gap: 3em;
      -webkit-print-color-adjust: exact;
      print-color-adjust: exact;
      break-after: page;
    }

    li {
      list-style: attr(data-n);
      padding-inline-start: 0.35em;

      &::marker {
        font-weight: bolder;
        content: attr(data-n) "."
      }

      /*       &::before {
      content: attr(data-o) ".";
      font-weight: 700;
      margin-inline-end: 0.35em;
    } */
    }
  }
}


.scrim-processed,
.scrim {
  position: fixed;
  inset: 0;
  background: #0008;
  backdrop-filter: blur(0.5em);
  place-items:center;
  display: none;
  z-index: 2;

  > div {
    background: var(--bg);
    border-radius: 0.5em;
    padding: 2em;
    font-family: Helvetica, sans-serif;
    max-width: 300px;
    width: 80%;

    h2 {
      margin-block: 0 2rem;
      font-weight: 400;
    }

    p {
      margin-block: 1rem 0;
      font-weight: 300;
    }
  }
}

.scrim-processed.open,
:not(:has(:invalid)) .scrim {
  display: grid;
}

@media print {
  header, footer, .game-description {
    display: none;
  }

  h1 {
    font-size: 1.5em;
    margin: 0;
    margin-bottom: 0.5em;
    /* bottom: 0%;
    position: fixed;
    left: 0%; 
    color: #f001 !important;
    z-index: 3; */

    &::after {
      content: " - comiCSS.art";
    }
  }
  h2 {
    font-size: 1rem;
    margin: 0em;
  }
  li {
    font-size: 0.9em;
  }
}

